<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/cloud_server">
        <EditTextPreference
            app:icon="@drawable/ic_server"
            app:key="gateway.cloud_url"
            app:title="@string/api_url"
            app:enableCopying="true"/>
        <EditTextPreference
            app:icon="@drawable/ic_token"
            app:key="gateway.private_token"
            app:summary="@string/ignored_for_public_server"
            app:title="@string/private_token" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/encryption">
        <EditTextPreference
            app:icon="@drawable/ic_encryption"
            app:key="encryption.passphrase"
            app:summary="@string/use_empty_to_disable"
            app:title="@string/passphrase" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <SeekBarPreference
            android:max="600"
            app:defaultValue="0"
            app:enabled="true"
            app:icon="@drawable/ic_timer"
            app:key="messages.SECONDS_BETWEEN_MESSAGES"
            app:showSeekBarValue="true"
            app:summary="@string/random_value_from_0_to_selected_value_will_be_used"
            app:title="@string/delay_between_messages_seconds" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/limits">
        <DropDownPreference
            android:defaultValue="Disabled"
            android:entries="@array/limit_periods_titles"
            android:entryValues="@array/limit_periods_values"
            android:icon="@drawable/ic_period"
            android:key="messages.limit_period"
            app:title="@string/period"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="0"
            android:icon="@drawable/ic_send"
            android:key="messages.limit_value"
            app:title="@string/messages_count"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>