<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/device_key">
        <Preference
            android:icon="@drawable/ic_key"
            android:key="device.rotate_key"
            android:persistent="false"
            android:summary="@string/rotate_device_key_summary"
            android:title="@string/rotate_device_key" />
        <Preference
            android:icon="@drawable/ic_key"
            android:key="device.key_fingerprint"
            android:persistent="false"
            android:summary="@string/key_fingerprint_not_available"
            android:title="@string/key_fingerprint" />
        <ListPreference
            android:entries="@array/rotation_intervals_titles"
            android:entryValues="@array/rotation_intervals_values"
            android:icon="@drawable/ic_key"
            android:key="device.key_rotate_interval_days"
            android:title="@string/automatic_key_rotation"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>