<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/inbox">
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_advanced"
            android:key="receiver.content_provider_enabled"
            app:summary="@string/receiver_content_provider_monitoring_summary"
            app:title="@string/receiver_content_provider_monitoring" />

        <EditTextPreference
            app:icon="@drawable/ic_log_lifetime"
            app:key="incoming.lifetime_days"
            app:title="@string/delete_after_days"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
